chore: initial setup

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -16,8 +16,9 @@
     "sysoev.language-stylus",
     "vue.vscode-typescript-vue-plugin",
     "antfu.vite",
-    "zixuanchen.vitest-explorer",
     "vue.volar",
     "sdras.vue-vscode-snippets",
+    "vitest.explorer",
+    "nuxtr.nuxtr-vscode",
   ]
 }
