--- a/.eslintrc
+++ b/.eslintrc
@@ -5,6 +5,10 @@
   "rules": {
     "no-undef": "off",
     "@typescript-eslint/no-unused-vars": "off",
-    "vue/multi-word-component-names": "off"
-  },
+    "vue/multi-word-component-names": "off",
+    "space-before-function-paren": [
+      "error",
+      "never"
+    ]
+  }
 }
