--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@intlify/unplugin-vue-i18n": "^2.0.0",
     "@nuxt/image": "1.3.0",
     "@nuxtjs/eslint-config-typescript": "^12.1.0",
+    "@pinia-plugin-persistedstate/nuxt": "^1.2.0",
     "@vue/language-plugin-pug": "^1.8.27",
     "cz-conventional-changelog": "^3.3.0",
     "eslint": "^8.57.0",
