--- a/.eslintrc
+++ b/.eslintrc
@@ -8,7 +8,11 @@
     "vue/multi-word-component-names": "off",
     "space-before-function-paren": [
       "error",
-      "never"
+      {
+        "anonymous": "always",
+        "named": "never",
+        "asyncArrow": "always"
+      }
     ]
   }
 }
